
- Core:
  . Added first-class callable cache to share instances for the duration of the
    request. (ilutov)
  . It is now possible to use reference assign on WeakMap without the key
    needing to be present beforehand. (ndossche)
  . Added `clamp()`. (kylekatarnls, thinkverse)
  . Fix OSS-Fuzz #429429090 (Failed assertion on unset() with uninitialized
    container). (ilutov)

- Date:
  . Update timelib to 2022.16. (Derick)

- DOM:
  . Removed LIBXML_XINCLUDE from valid options for XMLDocument,
    as it was a no-op. (ndossche)

- Fileinfo:
  . Fixed bug GH-20679 (finfo_file() doesn't work on remote resources).
    (ndossche)

- Hash:
  . Upgrade xxHash to 0.8.2. (timwolla)

- Intl:
  . Added IntlNumberRangeFormatter class to format an interval of two numbers
    with a given skeleton, locale, collapse type and identity fallback.
    (BogdanUngureanu)
  . Fixed bug GH-20426 (Spoofchecker::setRestrictionLevel() error message
    suggests missing constants). (DanielEScherzer)

- JSON:
  . Enriched JSON last error / exception message with error location.
    (Juan Morales)

- Fibers:
  . Fixed bug GH-20483 (ASAN stack overflow with fiber.stack_size INI
    small value). (David Carlier)

- Mail:
  . Fixed bug GH-20862 (null pointer dereference in 
    php_mail_detect_multiple_crlf via error_log (jordikroon)

- Mbstring:
  . ini_set() with mbstring.detect_order changes the order of mb_detect_order
    as intended, since mbstring.detect_order is an INI_ALL setting. (tobee94)
  . Added GB18030-2022 to default encoding list for zh-CN. (HeRaNO)
  . Fixed bug GH-20836 (Stack overflow in mb_convert_variables with
    recursive array references). (alexandre-daubois)

- Opcache:
  . Fixed bug GH-20051 (apache2 shutdowns when restart is requested during
    preloading). (Arnaud, welcomycozyhom)

- OpenSSL:
  . Implemented GH-20310 (No critical extension indication in
    openssl_x509_parse() output). (StephenWall)

- PDO_PGSQL: